--- a/Miembros/Miembros.html
+++ b/Miembros/Miembros.html
@@ -1,6 +1,2 @@
----
-layout: miembros
----
 ##Diseñadores web
-*Alumno 1*
-><div style="text-aling: justify"> Encargado del desarrollo de la pagina web
+##Investigacion
